<resources>

    <string name="app_name">aTask</string>
    <string name="reset">Reset</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_atask">ATaskActivity</string>
    <string name="next_task">Next Tasks</string>
    <string name="new_task">New</string>
    <string name="new_task_title">New Task</string>
    <string name="new_task_form_title_label">Title :</string>
    <string name="new_task_form_text_label">Text :</string>
    <string name="new_task_form_date_time_label">Date :</string>
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="canceled_task">Canceled</string>
    <string name="saved_task">Saved</string>
    <string name="delete_task">Delete</string>
    <string name="no_task">No task</string>
    <string name="select_task">Select Tasks</string>
    <string name="delete_selected_tasks">Delete</string>
    <string name="done_selected_tasks">Done</string>
    <string-array name="select_menu">
        <item>Edit</item>
        <item>Done</item>
        <item>Delete</item>
    </string-array>
    <string name="set_date">Set date</string>
    <string name="set_time">Set time</string>
    <string name="new_task_form_date_time_default">Click to set the date limit of your task</string>
</resources>