<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/select_task_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_task" />

    <ListView
        android:id="@+id/select_task_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/select_task_title" >
    </ListView>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">
        
        <Button 
           android:layout_weight="0.5"
           android:id="@+id/delete_selected_task"
           android:layout_height="wrap_content"
           android:layout_width="0dp"    
           android:text="@string/delete_selected_tasks"
           android:onClick="deleteSelectedTasks" />

        <Button
           android:layout_weight="0.5" 
           android:id="@+id/done_selected_task"
           android:layout_height="wrap_content" 
           android:layout_width="0dp"     
           android:text="@string/done_selected_tasks"
           android:onClick="doneSelectedTasks" />
        
    </LinearLayout>
</RelativeLayout>
