<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewTaskActivity" >

    <TextView
        android:id="@+id/new_task_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_task_title" />

    <LinearLayout
        android:id="@+id/new_task_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/new_task_title"
        android:orientation="vertical" >
        
        <TextView
            android:id="@+id/new_task_form_title_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="19dp"
            android:text="@string/new_task_form_title_label" />
        
        <EditText
            android:id="@+id/new_task_form_title_input"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:inputType="text"
            android:singleLine="true" />
        
        <TextView
            android:id="@+id/new_task_form_text_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="19dp"
            android:text="@string/new_task_form_text_label" />
        
        <EditText
            android:id="@+id/new_task_form_text_input"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:inputType="textMultiLine"
            android:gravity="top"
            android:lines="5" />
        
        <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:layout_marginLeft="20dp"
	        android:layout_marginRight="20dp"
	        android:layout_marginTop="10dp"
	        android:weightSum="1.0" >
	        
            <Button 
                android:layout_height="fill_parent" 
                android:layout_width="0dip"
                android:layout_weight=".5" 
                android:text="@string/save_button" 
                android:onClick="saveAction" />
            
            <Button 
                android:layout_height="fill_parent"
                android:layout_width="0dip" 
                android:layout_weight=".5"
                android:text="@string/cancel_button" 
                android:onClick="cancelAction" />
            
        </LinearLayout>
        
    </LinearLayout>

    

    
    
</RelativeLayout>
